--- a/notebooks/2.0-daveg-long-island-contributors.ipynb
+++ b/notebooks/2.0-daveg-long-island-contributors.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Processing Large Files\n",
+    "\n",
+    "We now have a list of Long Island zipcodes, and we can use it to make sure we are only looking at Long Island data. There's an awful lot of data, though - 18GB, in 54 separate files. We could read each file separately into Pandas data frames, and then filter them to the Long Island zipcodes. But, there is a better way! We can use Polars, a new dataframe library built on Rust for speed and performance. We rely on some neat features along the way to write less code and get more for it. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,8 +20,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the header file description from the FEC to figure out the columns and their order. This lets us see, for instance, that STATE is column 10 and ZIP_CODE is column 11. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +69,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We load the list of zipcodes we created in our last notebook. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +92,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bad Data! We have someone in there as \n",
-    "- zipcode 'W11 3LN'. As it turns out, this is a postal code in England (!!!!!)\n",
-    "- tranaction_dt 'LINCOLN' (!)\n",
-    "- shape error, because some of the data is so badly formed that it is missing entire columns\n",
+    "Unfortunately, we can't just apply our header columns to the data. As we might expect from such a large set of data, some of it is a mess. Surprises I found while trying to process the data: \n",
     "\n",
-    "That last one is fatal to pretty much any attempt to read data. It means that we would have to do extra work, testing each record to make sure it is actually complete. \n",
+    "- Non-US zipcodes like 'W11 3LN'. This is a postal code in England (!!!!!)\n",
+    "- Bad tranaction_dt 'LINCOLN'\n",
+    "- Records missing some of the required columns\n",
     "\n",
-    "the data is in not great shape, unfortunately. That's always the case with things like this. \n",
-    "\n",
-    "\n",
-    "This scanned 18GB of data from my machine in just over a minute. "
+    "That last one is the most serious because, if we provide a list of columns to polars, it forces every record to have the same number of fields and fails when that's not true. But, we can refer to the columns by their positions instead, treat every column as utf8, and then apply filters to the data to make sure we only get the zipcodes we want. We also tell polars to scan the data in chunks, rather than try to read the entire file into RAM. This code is unbelievably performant - it scanned 18GB of data from my machine in just over a minute. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
