Changed notebook live!!

--- a/notebooks/1.0-daveg-long-island-zipcodes.ipynb
+++ b/notebooks/1.0-daveg-long-island-zipcodes.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# The Goal\n",
     "\n",
-    "I want to look at individual contributions to political campaigns just prior to the 2020 presidential election made by people on Long Island. I've always had an interest in politics, but I'm a native of Westcheter (Yonkers!) by birth and don't know much about my surroundings. Reddit will tell you that Bellmore is a Republic enclave, but is that true? How can we find out? Voting is a great measure of that, of course, but it's not a particularly \"loud\" activity. Money is interesting, because there's a reason that we say \"put your money where your mouth is\". \n",
+    "I want to look at individual contributions to political campaigns just prior to the 2020 presidential election made by people on Long Island. Money is interesting, because there's a reason that we say \"put your money where your mouth is\". \n",
     "\n",
     "There's also, as we'll see, a lot you can learn from the data on its own. It contains things like Occupation and Employer that are just interesting in their own right. We could use it, for instance, to find employers and contacts that we might be interested in. Here's an example record: \n",
     "\n",
