Adding quarto website metadata.

--- a/notebooks/1.0-daveg-long-island-zipcodes.ipynb
+++ b/notebooks/1.0-daveg-long-island-zipcodes.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "https://www.linkedin.com/pulse/geocoding-geopy-your-own-nominatim-server-chonghua-yin/?trk=related_artice_Geocoding%20with%20GeoPy%20and%20Your%20Own%20Nominatim%20Server_article-card_title\n",
     "\n",
-    "We could interact with this instance directly using http requests, but we'll use geopy instead. This library allows us to switch geocoders based on the purpose we have in mind, and also allows us to implement rate limiters if the geocoding service requires it.  \n"
+    "We could interact with this instance directly using http requests, but we'll use geopy instead. This library allows us to switch geocoders based on the purpose we have in mind, and also allows us to implement rate limiters if the geocoding service requires it. As we're using our local copy we don't have to worry about that, but if you were to use OSM's geocoder directly, be polite! \n"
    ]
   },
   {
@@ -717,20 +717,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to keplergl_map.html!\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7056f8be747455b829eaaa149f4c3a7",
+       "model_id": "3d4108ed7d7a4b198c3408788dcc6d03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -746,7 +747,18 @@
     "from keplergl import KeplerGl\n",
     "ny_map = KeplerGl(height=800)\n",
     "ny_map.add_data(ny_zip_geocoded_gdf[[\"LOCALE NAME\", \"geometry\"]])\n",
+    "ny_map.save_to_html()\n",
     "ny_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "{html}\n",
+    "<iframe width=\"800\" height=\"500\" src=\"keplegl_map.html\" title=\"NY Zipcodes\"></iframe>\n",
+    "```\n"
    ]
   },
   {
@@ -776,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +887,7 @@
        "[1 rows x 26 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +941,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f04f6812fc2e43d7ba8b144ec6f764b3",
+       "model_id": "d83d26abd2d74f7e95edb8f10defaddb",
        "version_major": 2,
        "version_minor": 0
       },
