Fixing html tag.

--- a/notebooks/1.0-daveg-long-island-zipcodes.ipynb
+++ b/notebooks/1.0-daveg-long-island-zipcodes.ipynb
@@ -755,8 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
-    "{html}\n",
+    "```{html}\n",
     "<iframe width=\"800\" height=\"500\" src=\"keplegl_map.html\" title=\"NY Zipcodes\"></iframe>\n",
     "```\n"
    ]
