--- a/notebooks/1.0-daveg-long-island-zipcodes.ipynb
+++ b/notebooks/1.0-daveg-long-island-zipcodes.ipynb
@@ -756,7 +756,7 @@
    "metadata": {},
    "source": [
     "```{html}\n",
-    "<iframe width=\"800\" height=\"500\" src=\"keplegl_map.html\" title=\"NY Zipcodes\"></iframe>\n",
+    "<iframe width=\"800\" height=\"500\" src=\"./keplergl_map.html\" title=\"NY Zipcodes\"></iframe>\n",
     "```\n"
    ]
   },
